--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.89"
+chrono = "0.4.38"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
